salesforce-port/force-app/main/default/objects/Expense_Category__c/Expense_Category__c.object-meta.xml
<CustomObject>
    <label>Expense Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>