salesforce-port/force-app/main/default/objects/Expense_Category__c/fields/Receipt_Required__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Required__c</fullName>
    <label>Receipt Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>